<resources>
    <string name="app_name">Tapper Tracker</string>

    <string name="add_tag_label">Adding a tag</string>
    <string name="add_tag_title">Tap a tag to track!</string>
    <string name="add_tag_description">Place your device on top of a Tapper Tracker Tag to start tracking it.</string>

    <string name="nfc_disabled_title">NFC disabled</string>
    <string name="nfc_disabled_description">NFC is currently disabled on your phone, but required for Tapper Tracker to function. Please enabled it in your device settings.</string>
    <string name="open_nfc_settings">Open NFC Settings</string>

    <string name="no_nfc_title">NFC not supported</string>
    <string name="no_nfc_description">NFC is required for Tapper Tracker to function, but not supported by your device. Please use a phone with NFC support.</string>

    <string name="last_tapped_on">Last tapped on %1$s</string>
    <string name="remaining_years">%1$d yr. left</string>
    <string name="remaining_months">%1$d mo. left</string>
    <plurals name="remaining_days">
        <item quantity="one">%1$d day left</item>
        <item quantity="other">%1$d days left</item>
    </plurals>
    <string name="remaining_none">Today</string>
    <string name="remaining_negative">Tracked</string>

    <plurals name="time_unit_year">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <plurals name="time_unit_month">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <plurals name="time_unit_week">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <plurals name="time_unit_day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Stop</string>
    <string name="pause_description">Stop reminder timer, yo</string>
    <string name="reset">Reset</string>
    <string name="reset_description">Reset reminder timer, yo</string>
    <string name="edit">Edit</string>
    <string name="edit_description">Edit reminder timer, yo</string>

    <string name="stopped">Tracking stopped</string>

    <string name="edit_tag_title">Editing tag</string>
    <string name="new_tag_title">New tag tapped</string>
    <string name="new_tag_message">Save this tag to begin tracking.</string>
    <string name="save">Save</string>

    <string name="tag_name">Name</string>
    <string name="tag_name_blank_error">Name cannot be blank</string>
    <string name="remind_in">Remind me in</string>
    <string name="on_date">on %1$s</string>
    <string name="notes">Notes</string>
    <string name="exit_no_save_title">Exit without saving?</string>
    <string name="exit_no_save_new_tag_no_name_message">Your new tag will not be saved.</string>
    <string name="exit_no_save_new_tag_message">%1$s will not be saved.</string>
    <string name="exit_no_save_existing_tag_message">Your changes to %1$s will not be saved.</string>
</resources>
