<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.HowToTapFragment">

    <ImageView
        android:id="@+id/onboarding_tag"
        android:layout_width="168dp"
        android:layout_height="86dp"
        android:importantForAccessibility="no"
        android:src="@drawable/onboarding_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_phone" />

    <ImageView
        android:id="@+id/onboarding_tag_effect"
        android:layout_width="168dp"
        android:layout_height="86dp"
        android:alpha="0"
        android:importantForAccessibility="no"
        android:src="@drawable/onboarding_tag_tapped"
        app:layout_constraintBottom_toBottomOf="@id/onboarding_tag"
        app:layout_constraintEnd_toEndOf="@id/onboarding_tag"
        app:layout_constraintStart_toStartOf="@id/onboarding_tag"
        app:layout_constraintTop_toTopOf="@id/onboarding_tag" />

    <ImageView
        android:id="@+id/onboarding_phone"
        android:layout_width="294dp"
        android:layout_height="148dp"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/onboarding_phone"
        android:translationY="-40dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="320dp" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.App.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/highEmphasis"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/nfc_disabled_title" />

    <TextView
        android:id="@+id/description"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/highEmphasis"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/nfc_disabled_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.App.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/open_nfc_settings"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
