<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".pages.edit.EditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/iconGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <ImageView
        android:id="@+id/nameIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_name"
        android:tint="@color/solid"
        app:layout_constraintEnd_toEndOf="@id/iconGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tag_name"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/reminderLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/iconGuideline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/reminderIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_date"
        android:tint="@color/solid"
        app:layout_constraintEnd_toEndOf="@id/iconGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/reminderDuration" />

    <TextView
        android:id="@+id/reminderLabel"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/remind_in"
        android:labelFor="@id/reminderDuration"
        app:layout_constraintBottom_toTopOf="@id/reminderDuration"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/iconGuideline"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminderDuration"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/reminderUnit"
        app:layout_constraintStart_toStartOf="@id/iconGuideline"
        app:layout_constraintTop_toBottomOf="@id/reminderLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reminderDurationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:text="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminderUnit"
        style="@style/Widget.App.TextInputLayout.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/reminderDuration"
        app:layout_constraintEnd_toEndOf="@id/reminderLabel"
        app:layout_constraintStart_toEndOf="@id/reminderDuration"
        app:layout_constraintTop_toTopOf="@id/reminderDuration">

        <AutoCompleteTextView
            android:id="@+id/reminderUnitField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:text="weeks"
            android:editable="false"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/on"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_date"
        android:labelFor="@id/date"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/date"
        app:layout_constraintStart_toStartOf="@id/iconGuideline"
        app:layout_constraintTop_toTopOf="@id/date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/on"
        app:layout_constraintEnd_toEndOf="@id/reminderLabel"
        app:layout_constraintStart_toEndOf="@id/on"
        app:layout_constraintTop_toBottomOf="@id/reminderDuration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:editable="false"
            tools:ignore="Deprecated"
            android:inputType="none"
            tools:text="March 29, 2020" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/notesIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_note"
        android:tint="@color/solid"
        app:layout_constraintEnd_toEndOf="@id/iconGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/notes" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/iconGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notesField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
